add rest template